syntax ="proto3";
import "pb_enum/enum.proto";
import "pb_msg/msg.proto";

package pb_mq;
option go_package = "lark/pkg/proto/pb_mq;pb_mq";

message InboxMessage {
  pb_enum.TOPIC topic = 1;
  pb_enum.SUB_TOPIC sub_topic = 2;
  bytes body = 3;
}
